[package]
name = "clair"
description = "Command-Line Arithmetic in Rust"
version = "0.1.1-dev"
edition = "2021"
repository = "https://github.com/hanslovsky/clair"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
authors = ["Philipp Hanslovsky <philipp.hanslovsky@gmail.com>"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }

[[bin]]
name = "sum"
path = "src/sum/bin/main.rs"

[[bin]]
name = "product"
path = "src/product/bin/main.rs"

[[bin]]
name = "count"
path = "src/count/bin/main.rs"

[[bin]]
name = "mean"
path = "src/mean/bin/main.rs"

